@@ -30,7 +30,5 @@ setup(name='debomatic',
       packages=['Debomatic'],
       scripts=['debomatic'],
       data_files=[('share/debomatic/modules',
-                  ['modules/DateStamp.py', 'modules/Lintian.py', 'modules/Contents.py']),
-                  ('/etc/init.d', ['etc/init.d/debomatic']),
-                  ('/etc/default', ['etc/default/debomatic'])])
+                  ['modules/DateStamp.py', 'modules/Lintian.py', 'modules/Contents.py'])])
 
